change in ys-bc-shawdow-2

--- a/johan.html
+++ b/johan.html
@@ -76,8 +76,8 @@
         }
       }
       /* Mid-sized Devices between 576px and 768px */
-      
-      @media (min-width: 576px) and  (max-width: 768px){
+
+      @media (min-width: 576px) and (max-width: 768px) {
         .flip-card {
           width: 500px; /* Full width on mobile */
           height: 300px; /* Adjust height for mobile */
@@ -106,10 +106,16 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="img/shreepch/shreepech-front.png" alt="Front of Shreepech business card" />
+            <img
+              src="img/shreepch/shreepech-front.png"
+              alt="Front of Shreepech business card"
+            />
           </div>
           <div class="flip-card-back">
-            <img src="img/shreepch/shreepech-back-johan.png" alt="Back of Shreepech business card" />
+            <img
+              src="img/shreepch/shreepech-back-johan.png"
+              alt="Back of Shreepech business card"
+            />
           </div>
         </div>
       </div>
